--- a/styles/Gas.module.css
+++ b/styles/Gas.module.css
@@ -2,4 +2,6 @@
   background-image: url("../public/img/airplanes.png");
   background-clip: border-box;
   background-repeat: no-repeat;
+
+  background-size: contain;
 }
