--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,7 @@
   background-image: url("../public/img/Cyb3rYoga.png");
   background-clip: border-box;
   background-attachment: fixed;
+  background-repeat: no-repeat;
 
   border: 3px solid #73ad21;
   position: relative;
