--- a/styles/Hangar.module.css
+++ b/styles/Hangar.module.css
@@ -1,9 +1,6 @@
 .background {
-  background-image: url("../public/img/airplanes3.png");
-  background-clip: border-box;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-
-  border: 3px solid #73ad21;
-  position: relative;
+  object-fit: cover;
+  object-position: center;
+  z-index: -1;
+  position: fixed !important;
 }
