--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,10 +16,15 @@
 }
 
 .card:hover {
+  background-color: rgba(31, 17, 5, 0.8);
   transform: scale(0.99);
   box-shadow: 0px 0px 0px 2px #7dd3fc;
 }
 
 .text {
-  text-shadow: 1px 1px grey;
+  /* text-shadow: 1px 1px grey; */
+}
+
+.text > h4 {
+  text-shadow: 2px 2px rgba(31, 17, 5);
 }
