feat(db): add mongodb connection and cargo coll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,3 +22,14 @@ body {
   color: #e7e8e8;
   background: #0f1318;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
