--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,19 +7,23 @@
 
 .card {
   text-decoration: none;
-  background-color: rgba(31, 17, 5, 0.6);
+  /* background-color: rgba(31, 17, 5, 0.6); */
+  background: linear-gradient(45deg, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.75));
   border-radius: 10px;
   cursor: pointer;
   /* padding: 15px;
   border: 10px solid transparent;
   border-image: url(https://i.stack.imgur.com/sjbeu.png) 30 round; */
+  transition: all ease-in 100ms;
+  box-shadow: 0px 0px 0px 0px #556cd6;
 }
 
 .card:hover {
-  background-color: rgba(31, 17, 5, 0.8);
-  box-shadow: 0px 0px 0px 2px #7dd3fc;
+  background: linear-gradient(45deg, rgba(255, 255, 255, 0.55), rgba(255, 255, 255, 0.75));
+  box-shadow: 0px 0px 0px 2px #556cd6;
+  transform: scale(1.02);
 }
 
 .text > h4 {
-  text-shadow: 2px 2px rgba(31, 17, 5);
+  text-shadow: 2px 2px rgba(31, 17, 5, 0.2);
 }
